--- a/h3_turbo_local_benchmark.ipynb
+++ b/h3_turbo_local_benchmark.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c6a2c8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +14,13 @@
     "import h3_turbo\n",
     "import matplotlib.pyplot as plt\n",
     "import psutil\n",
-    "import threading"
+    "import threading\n",
+    "import multiprocessing"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "450719f2",
    "metadata": {},
    "source": [
     "# H3 Turbo Local Benchmark\n",
@@ -28,6 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a9e4411e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "32510eec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2070717f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef8673ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,12 +121,23 @@
     "        p ^= (p >> np.uint64(7)); p *= c1\n",
     "        p ^= (p >> np.uint64(13)); p *= c2\n",
     "        p ^= (p >> np.uint64(31))\n",
-    "    return p"
+    "    return p\n",
+    "\n",
+    "def cpu_task_raw(chunk, res):\n",
+    "    parents = [h3.str_to_int(h3.cell_to_parent(h3.int_to_str(h), res)) for h in chunk]\n",
+    "    return numpy_apply_weight(np.array(parents, dtype=np.uint64))\n",
+    "\n",
+    "def cpu_task_join(chunk, res, zone_set):\n",
+    "    parents = [h3.str_to_int(h3.cell_to_parent(h3.int_to_str(h), res)) for h in chunk]\n",
+    "    parents = numpy_apply_weight(np.array(parents, dtype=np.uint64))\n",
+    "    # Note: zone_set lookup is fast, but doing it in parallel helps\n",
+    "    return np.array([1 if p in zone_set else 0 for p in parents], dtype=np.uint8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e6cc680e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f115b74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,18 +190,21 @@
     "print(\"Running GPU...\")\n",
     "h3_turbo.warmup()\n",
     "start_gpu = time.time()\n",
-    "gpu_raw_results = h3_turbo.batch_transform(pings_np, RES_RAW)\n",
+    "gpu_raw_results = h3_turbo.batch_transform(pings_np.copy(), RES_RAW)\n",
     "raw_gpu_time = time.time() - start_gpu\n",
     "print(f\"GPU Time: {raw_gpu_time:.4f} s\")\n",
     "\n",
     "# CPU\n",
-    "print(\"Running CPU (Vectorized NumPy)...\")\n",
+    "print(\"Running CPU (Multiprocessing)...\")\n",
     "start_cpu = time.time()\n",
-    "# 1. Cell to Parent (List comprehension is fastest in h3-py)\n",
-    "parents_list = [h3.str_to_int(h3.cell_to_parent(h3.int_to_str(h), RES_RAW)) for h in pings_np]\n",
-    "parents_arr = np.array(parents_list, dtype=np.uint64)\n",
-    "# 2. Scramble\n",
-    "cpu_raw_results = numpy_apply_weight(parents_arr)\n",
+    "num_workers = os.cpu_count()\n",
+    "chunk_size = (len(pings_np) + num_workers - 1) // num_workers\n",
+    "chunks = [pings_np[i:i + chunk_size] for i in range(0, len(pings_np), chunk_size)]\n",
+    "\n",
+    "with multiprocessing.Pool(processes=num_workers) as pool:\n",
+    "    results = pool.starmap(cpu_task_raw, [(c, RES_RAW) for c in chunks])\n",
+    "\n",
+    "cpu_raw_results = np.concatenate(results)\n",
     "raw_cpu_time = time.time() - start_cpu\n",
     "print(f\"CPU Time: {raw_cpu_time:.4f} s\")\n",
     "print(f\"Speedup: {raw_cpu_time / raw_gpu_time:.2f}x\")"
@@ -191,6 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "936b7a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,16 +231,18 @@
     "# CPU\n",
     "print(\"Running CPU (Set Lookup)...\")\n",
     "# Pre-calculate zone set (fair comparison)\n",
-    "zone_parents = numpy_apply_weight(np.array([h3.str_to_int(h3.cell_to_parent(h3.int_to_str(z), RES_JOIN)) for z in zones_np], dtype=np.uint64))\n",
+    "zone_parents = numpy_apply_weight(np.array([h3.str_to_int(h3.cell_to_parent(h3.int_to_str(int(z)), RES_JOIN)) for z in zones_np], dtype=np.uint64))\n",
     "zone_set = set(zone_parents)\n",
     "\n",
     "start_cpu = time.time()\n",
-    "# 1. Pings to Parent\n",
-    "cpu_parents = np.array([h3.str_to_int(h3.cell_to_parent(h3.int_to_str(p), RES_JOIN)) for p in pings_np], dtype=np.uint64)\n",
-    "# 2. Scramble\n",
-    "cpu_parents = numpy_apply_weight(cpu_parents)\n",
-    "# 3. Lookup\n",
-    "cpu_join_results = np.array([1 if p in zone_set else 0 for p in cpu_parents], dtype=np.uint8)\n",
+    "num_workers = os.cpu_count()\n",
+    "chunk_size = (len(pings_np) + num_workers - 1) // num_workers\n",
+    "chunks = [pings_np[i:i + chunk_size] for i in range(0, len(pings_np), chunk_size)]\n",
+    "\n",
+    "with multiprocessing.Pool(processes=num_workers) as pool:\n",
+    "    results = pool.starmap(cpu_task_join, [(c, RES_JOIN, zone_set) for c in chunks])\n",
+    "\n",
+    "cpu_join_results = np.concatenate(results)\n",
     "join_cpu_time = time.time() - start_cpu\n",
     "matches_cpu = np.sum(cpu_join_results)\n",
     "print(f\"CPU Time: {join_cpu_time:.4f} s (Matches: {matches_cpu})\")\n",
