--- a/h3_turbo_local_benchmark.ipynb
+++ b/h3_turbo_local_benchmark.ipynb
@@ -254,6 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e6a0738",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +308,8 @@
     "zones_sample = np.random.choice(zones_np, sample_size, replace=False)\n",
     "\n",
     "# Convert H3 to Lat/Lon for plotting\n",
-    "pings_coords = np.array([h3.h3_to_geo(h3.int_to_str(h)) for h in pings_sample])\n",
-    "zones_coords = np.array([h3.h3_to_geo(h3.int_to_str(h)) for h in zones_sample])\n",
+    "pings_coords = np.array([h3.cell_to_latlng(h3.int_to_str(h)) for h in pings_sample])\n",
+    "zones_coords = np.array([h3.cell_to_latlng(h3.int_to_str(h)) for h in zones_sample])\n",
     "\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.scatter(pings_coords[:, 1], pings_coords[:, 0], c='blue', alpha=0.1, s=1, label='Pings')\n",
